fix(circle): fish off-centre

--- a/src/scss/injected/circle.sass
+++ b/src/scss/injected/circle.sass
@@ -83,6 +83,7 @@
   opacity: 0.5
   filter: grayscale(0.5)
   line-height: 18/14 * $default-font-size
+  width: auto
   &:hover
     filter: grayscale(0)
     opacity: 1
